# corgo

./: Cargo.toml
crates/atoms/: Cargo.toml  atoms.txt  build.rs
crates/atoms/src/: lib.rs
examples/: buttons.rs  hello.rs
src/: lib.rs  memory.rs  render.rs  runtime.rs  utils.rs  window.rs
src/state/: focus.rs  mod.rs
